# RAFIKICGM

./: .readthedocs.yaml  keep_CEN.csv  pyproject.toml  run_pipeline.py
DOCUMENATION/: sql_cookies.txt
docs/: README.md  requirements.txt
erosita_instrument_files/: erosita_2_open.xml  erosita_4_open.xml  erosita_5.xml  erosita_6_open.xml  erosita_7.xml  erosita_dummy.xml  erosita_vignetting_tm1_v4.0.fits  erosita_vignetting_tm2_v4.0.fits  erosita_vignetting_tm4_v4.0.fits  erosita_vignetting_tm5_v4.0.fits  onaxis_tm0_arf_filter_2023-01-17.fits  tm1_arf_10.fits  tm1_arf_filter_000101v02.fits  tm1_arf_open_000101v02.fits  tm2_arf_10.fits  tm2_arf_1000.fits  tm2_arf_filter_000101v02.fits  tm3_arf_10.fits  tm4_arf_10.fits  tm4_arf_filter_000101v02.fits  tm4_arf_open_000101v02.fits  tm5_arf_10.fits  tm5_arf_filter_000101v02.fits  tm6_arf_1000.fits  tm6_arf_filter_000101v02.fits  tm6_arf_open_000101v02.fits  tm7_arf_10.fits  tm7_arf_1000.fits
examples/: Galaxy_Samples.ipynb  Plotting_SZ_Results.ipynb  Plotting_Xray_Results.ipynb  Plotting_Xray_Results_fordissertation.ipynb  config_basic.yaml  erosita_comparison.csv
making_maps/: make_galaxy_catalog.ipynb  sql_cookies.txt  sz_map_eagle.py  xray_maps_eagle.py  xray_maps_simba.py
rafiki/: catalog.py  utils.py  xray.py
testing/: EAGLE_testing_highmass_szdat.hdf5  EAGLE_testing_szdat.hdf5  EAGLE_z01_matching_szdat.hdf5  EAGLE_z01_szdat.hdf5  RAFIKI_A_thermalenergy_dissertation_szdat.hdf5  RAFIKI_A_z01_dissertation_szdat.hdf5  RAFIKI_A_z01_highranges_dissertation_szdat.hdf5  RAFIKI_A_z01_lowmass_szdat.hdf5  RAFIKI_A_z01_matching_szdat.hdf5  RAFIKI_A_z01_ranges_dissertation_szdat.hdf5  RAFIKI_A_z01_szdat.hdf5  RAFIKI_B_thermalenergy_dissertation_szdat.hdf5  RAFIKI_B_z01_dissertation_szdat.hdf5  RAFIKI_B_z01_highranges_dissertation_szdat.hdf5  RAFIKI_B_z01_lowmass_szdat.hdf5  RAFIKI_B_z01_matching_szdat.hdf5  RAFIKI_B_z01_ranges_dissertation_szdat.hdf5  RAFIKI_B_z01_szdat.hdf5  RAFIKI_C_thermalenergy_dissertation_szdat.hdf5  RAFIKI_C_z01_lowmass_szdat.hdf5  (+49 more)
(+50 files in other folders)
